Bug 339691 - Look and feel kcm crashing
Summary: Look and feel kcm crashing
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
: 339577 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-05 06:24 UTC by Bhushan Shah
Modified: 2014-10-07 17:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bhushan Shah 2014-10-05 06:24:37 UTC
Thread 1 (Thread 0x7f48cf432780 (LWP 11683)):
[KCrash Handler]
#6  0x00007f48cb1b2967 in raise () from /usr/lib/libc.so.6
#7  0x00007f48cb1b3d3a in abort () from /usr/lib/libc.so.6
#8  0x00007f48cb8bcab8 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#9  0x00007f48ce778791 in KPluginInfo::name (this=this@entry=0x7fff929f8e20) at /home/bshah/aur/kservice-git/src/kservice/src/services/kplugininfo.cpp:308
#10 0x00007f48adc2f965 in KCMLookandFeel::load (this=0x22a1f80) at /home/bshah/aur/plasma-desktop-git/src/plasma-desktop/kcms/lookandfeel/kcm.cpp:176
#11 0x00007f48cbaea2da in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#12 0x00007f48ccf0b547 in QWidget::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#13 0x00007f48cceccf4c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#14 0x00007f48cced236e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#15 0x00007f48cbaba70b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#16 0x00007f48cbabc6d3 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQt5Core.so.5
#17 0x00007f48cbb11d43 in ?? () from /usr/lib/libQt5Core.so.5
#18 0x00007f48c7eb3a1d in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#19 0x00007f48c7eb3d08 in ?? () from /usr/lib/libglib-2.0.so.0
#20 0x00007f48c7eb3dbc in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#21 0x00007f48cbb12137 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#22 0x00007f48cbab8132 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#23 0x00007f48cbabfaec in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#24 0x000000000040f15c in main (argc=1, argv=<optimized out>) at /home/bshah/aur/systemsettings-git/src/systemsettings/app/main.cpp:55
Comment 1 Marco Martin 2014-10-06 12:15:50 UTC
Git commit 469b2e648bd6965a59a9f48b0b3eaa4d3fb81988 by Marco Martin.
Committed on 06/10/2014 at 12:15.
Pushed by mart into branch 'Plasma/5.1'.

check package metadata validity

M  +3    -0    kcms/lookandfeel/kcm.cpp

http://commits.kde.org/plasma-desktop/469b2e648bd6965a59a9f48b0b3eaa4d3fb81988
Comment 2 Christoph Feck 2014-10-07 17:42:32 UTC
*** Bug 339577 has been marked as a duplicate of this bug. ***