check package metadata validity

BUG:339691